--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
-    "module": "es2020",
+    "target": "ES2020",
     "lib": [
-      "es2020",
+      "es2018",
       "dom"
     ]
   },
